--- a/index.html
+++ b/index.html
@@ -13,6 +13,40 @@
     <title>Rollingbank</title>
   </head>
   <body>
+    <header>
+        <nav class="navbar bg-light navbar navbar-expand-lg">
+          <div class="container">
+            <a href="../index.html" class="navbar-brand letra">rollingbank</a>
+  
+            <button
+              class="navbar-toggler"
+              data-bs-toggle="collapse"
+              data-bs-target="#OpcionesMenu"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="OpcionesMenu">
+              <ul class="navbar-nav ms-auto">
+                <il class="nav-item">
+                  <a href="./index.html" class="nav-link">Inicio</a>
+                </il>
+                <il class="nav-item">
+                  <a href="#" class="nav-link">quienes somos</a>
+                </il>
+                <il class="nav-item">
+                  <a href="#" class="nav-link">precio</a>
+                </il>
+                <il class="nav-item">
+                  <a href="./pages/seguridad.html" class="nav-link">seguridad</a>
+                </il>
+                <il class="nav-item">
+                  <a href="#" class="nav-link">contacto</a>
+                </il>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </header>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
