--- a/index.html
+++ b/index.html
@@ -46,6 +46,61 @@
             </div>
           </div>
         </nav>
+        <footer class="text-bg-dark p-4 text-center text-lg-start text-white-50">
+            <div class="container"></div>
+            <h3 class="mb-4">
+              <strong>RollingBank</strong><a href="#" class="link-light mx-2"></a>
+              <i class="bi bi-instagram fs-5"></i>
+              <a href="#" class="link-light mx-2"></a>
+              <i class="bi bi-facebook fs-5"></i>
+              <a href="#" class="link-light mx-2"></a>
+              <i class="bi bi-twitter-x fs-5"></i>
+            </h3>
+            <div class="row">
+              <div class="col-md-12 col-lg-3 text-center text-lg-start">
+                <h5>Navegación</h5>
+                <ul class="list-unstyled">
+                  <li><u>¿Quienes somos?</u></li>
+                  <li><u>Precios</u></li>
+                  <li><u>Seguridad</u></li>
+                  <li><u>Ayuda</u></li>
+                  <li><u>Robo o extravio</u></li>
+                </ul>
+              </div>
+              <div class="col-md-4 col-lg-3">
+                <h5>Legales</h5>
+                <ul class="list-unstyled">
+                  <li><u>Régimen de transparencia</u></li>
+                  <li><u>Usuario bancario</u></li>
+                  <li><u>Conducta bancaria</u></li>
+                  <li><u>Estados contables</u></li>
+                  <li><u>Términos y condiciones</u></li>
+                </ul>
+              </div>
+              <div class="col-md-4 col-lg-3">
+                <img src="./img/usuariosfinancieros.png" width="150" alt="imagen" />
+              </div>
+              <div class="col-md-4 col-lg-3">
+                <h5>Unite</h5>
+                <ul class="list-unstyled">
+                  <li class="mb-2">
+                    <img
+                      src="./img/badge-apple-store.svg"
+                      width="150"
+                      alt="imagenes"
+                    />
+                  </li>
+                  <li>
+                    <img
+                      src="./img/google-play-badge-bb.svg"
+                      width="150"
+                      alt="imagenes"
+                    />
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </footer>
       </header>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
