--- a/index.html
+++ b/index.html
@@ -46,6 +46,80 @@
             </div>
           </div>
         </nav>
+        <main>
+            <section
+        id="carouselExampleIndicators"
+        class="carousel slide"
+        data-bs-ride="carousel"
+      >
+        <!--boton de las rayitas-->
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <!--aqui agregamos las imagenes-->
+        <div class="carousel-inner mb-5">
+          <div class="carousel-item active">
+            <img
+              src="./img/banner/bitcoin.jpg"
+              class="d-block w-100 productocarrusel"
+              alt="bitcoin"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./img/banner/cajero.jpg"
+              class="d-block w-100 productocarrusel"
+              alt="cajero"
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="./img/banner/dolar.jpg"
+              class="d-block w-100 productocarrusel"
+              alt="dolar"
+            />
+          </div>
+        </div>
+        <!--botones de atras y adelante-->
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Anterior</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Siguiente</span>
+        </button>
+      </section>
+        </main>
         <footer class="text-bg-dark p-4 text-center text-lg-start text-white-50">
             <div class="container"></div>
             <h3 class="mb-4">
